# football-predictor

./: .gitignore  LICENSE  README.md  app_common.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: retrain-monthly.yml  tests.yml  update-elo-weekly.yml
config/: backtest.yaml  logistic.yaml  mlp.yaml  poisson.yaml  xgb.yaml
config/leagues/: bundesliga.yaml  greek.yaml  la_liga.yaml  ligue_1.yaml  premier_league.yaml  serie_a.yaml
models/bundesliga/elo_xgb/: metadata.yaml  team_state.npz  xgb_model.ubj
models/bundesliga/ensemble/: metadata.yaml
models/bundesliga/logistic/: logistic_params.npz  metadata.yaml  team_state.npz
models/bundesliga/mlp/: metadata.yaml  mlp_params.npz  team_state.npz
models/bundesliga/poisson/: metadata.yaml  posterior_params.npz
models/greek/elo_xgb/: metadata.yaml  team_state.npz  xgb_model.ubj
models/greek/ensemble/: metadata.yaml
models/greek/logistic/: logistic_params.npz  metadata.yaml  team_state.npz
models/greek/mlp/: metadata.yaml  mlp_params.npz  team_state.npz
models/greek/poisson/: metadata.yaml  posterior_params.npz
models/la_liga/elo_xgb/: metadata.yaml  team_state.npz  (+1 more)
scripts/: train_ensemle.py  train_logistic.py  train_mlp.py  train_poisson.py  train_xgb.py  update_data.py  update_elo_state.py
src/match_predict/: config.py
tests/: test_backtest.py  test_config.py  test_data.py  test_elo_features.py  test_odds.py  test_predict_logistic_mlp.py  test_predict_poisson.py  test_predict_xgb.py  test_rps.py  test_update_data.py  test_update_elo_state.py
(+59 files in other folders)
